[gd_scene load_steps=7 format=2]

[ext_resource path="res://Area.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="OpenSimplexNoise" id=3]

[sub_resource type="NoiseTexture" id=4]
seamless = true
noise = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = SubResource( 4 )

[sub_resource type="SphereShape" id=2]

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.69999 )

[node name="Area" type="Area" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[connection signal="input_event" from="Area" to="Area" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="Area" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="Area" method="_on_Area_mouse_exited"]
